--- a/WebContent/css/footer.css
+++ b/WebContent/css/footer.css
@@ -1,52 +1,56 @@
 @charset "UTF-8";
 
 * {
-            margin: 0 auto;
-            padding: 0;
-            width: 100%;
-            font-family: 'NanumSquareLight';
-            font-family: 'NanumSquare';
-            font-family: 'NanumSquareBold';
-            font-family: 'NanumSquareExtraBold';
-            font-family: 'NanumSquareAcb';
-            font-family: 'NanumSquareAceb';
-            font-family: 'NanumSquareAcl';
-            font-family: 'NanumSquareAcr';
-        }
+	margin: 0 auto;
+	padding: 0;
+	width: 100%;
+	font-family: 'NanumSquareLight';
+	font-family: 'NanumSquare';
+	font-family: 'NanumSquareBold';
+	font-family: 'NanumSquareExtraBold';
+	font-family: 'NanumSquareAcb';
+	font-family: 'NanumSquareAceb';
+	font-family: 'NanumSquareAcl';
+	font-family: 'NanumSquareAcr';
+}
 
-        li {
-            list-style: none;
-        }
-        a {
-            text-decoration: none;
-            color: black;
-        }
+li {
+	list-style: none;
+}
 
+a {
+	text-decoration: none;
+	color: black;
+}
 
 /**************  footer **************/
-        footer {
-            width: 100%;
-            min-width: 1500px;
-            /* border: 1px solid black; */
-            box-sizing: border-box;
-            text-align: center;
-            height: 45px;
-            line-height: 45px;
-            overflow: hidden;
-        }
+footer {
+	width: 98%;
+	min-width: 1500px;
+	border-top: 3px solid #000560;
+	box-sizing: border-box;
+	text-align: center;
+	height: 90px;
+	line-height: 90px;
+	overflow: hidden;
+	font-weight: bold;
+	margin-top: 30px;
+}
 
-        #footer1, #footer2, #footer3 {
-            width: 33.33%;
-            box-sizing: border-box;
-            float: left;
-            background-color: #000560;
-            color: whitesmoke;
-        }
+#footer1, #footer2, #footer3 {
+	width: 33.33%;
+	box-sizing: border-box;
+	float: left;
+	color: black;
+}
 
-            #footer1 .logo {
-                width: 100px;
-                height: 50px;
-            }
-            
-            
-            
+#footer1 .logo {
+	width: 100px;
+	height: 60px;
+	margin-top: 13px;
+}
+
+#footer3 #address {
+	margin-top: 20px;
+	line-height: 25px;
+}
