--- a/WebContent/css/freeBoard.css
+++ b/WebContent/css/freeBoard.css
@@ -11,7 +11,7 @@ section {
 
 #content1, #content2, #content3 {
 	box-sizing: border-box;
-	/* border: 1px solid red; */
+	border: 1px solid red;
 }
 
 #content1 {
@@ -57,7 +57,7 @@ section {
 }
 
 /* 추가 */
-#content1 #lnb ul li:last-child {
+#content1 #lnb ul li:nth-child(3) {
 	background-color: whitesmoke;
 	font-size: 1.5em;
 }
@@ -90,18 +90,42 @@ section {
 	height: 90%;
 }
 
+th {
+	border-bottom: 1px dashed black;
+	height: 10%;
+}
+
+th:nth-child(1) {
+	width: 5%;
+}
+th:nth-child(2) {
+	width: 40%;
+}
+th:nth-child(3) {
+	width: 10%;
+}
+th:nth-child(4) {
+	width: 10%;
+}
+
+.left {
+	padding-left: 15px;
+	text-align: left;
+}
+
 #content2 td {
-	width: 25%;
+	width: 10%;
 	border: 1px dotted darkgray;
 	box-sizing: border-box;
+	margin-top: 10px;
 }
+
 #sname {
 	font-size: 1.2em;
 }
 
 /* content3 추가 */
 #content3 {
-	border: 1px solid lightgray;
 	height: 10%;
 	line-height: 60px;
 	background-color: whitesmoke;
