--- a/WebContent/css/lunch.css
+++ b/WebContent/css/lunch.css
@@ -1,26 +1,23 @@
 @charset "UTF-8";
 
 /**************  section **************/
+/**************  section **************/
 section {
 	width: 1500px;
 	height: 870px;
-	/* border: 1px solid black; */
 	box-sizing: border-box;
 	text-align: center;
 }
 
 #content1, #content2, #content3 {
 	box-sizing: border-box;
-	/* border: 1px solid red; */
 }
 
 #content1 {
 	height: 20%;
-	margin-top: 10px;
 }
 
 #content1 .content1 {
-	/* border: 1px solid red; */
 	box-sizing: border-box;
 	width: 100%;
 	height: 87px;
@@ -56,8 +53,8 @@ section {
 	box-sizing: border-box;
 }
 
-/* 추가 */
-#content1 #lnb ul li:last-child {
+/* 추가 - 페이지에 있을때 폴더색처럼 색 변경 */
+#content1 #lnb ul li:nth-child(2) {
 	background-color: whitesmoke;
 	font-size: 1.5em;
 }
@@ -75,34 +72,74 @@ section {
 	font-size: 2em;
 }
 
+/** 수정 진행하는 곳 **/
 #content2 {
-	height: 70%;
+	height: 75%;
 	background-color: whitesmoke;
-	border: 1px solid lightgray;
+	box-sizing: border-box;
 	border-radius: 5px 5px 0 0;
+	border: 1px solid lightgray;
 }
 
-#content2 table {
-	/* border: 2px solid green; */
+#content2 .lunchcal1 {
+	border: 1px dashed blue;
 	box-sizing: border-box;
-	margin-top: 35px;
-	width: 95%;
-	height: 90%;
 }
 
-#content2 td {
-	width: 25%;
-	border: 1px dotted darkgray;
+#content2 .lunchcal1 h2 {
+	height: 5%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#content2 .lunchcal2 {
+	border: 1px dashed purple;
+	width: 50%;
+	margin-top: 10px;
+	margin-bottom: 5px;
+	font-size: 1.3em;
+}
+
+#content2 .lunchcal2 select[name='year'], select[name='month'] {
+	width: 150px;
+	height: 40px;
+}
+
+#content2 .lunchcal3 {
+	margin-top: 25px;
+	height: 500px;
+}
+
+#content2 .lunchcal3 table {
+	box-sizing: border-box;
+	height: 20%;
+	width: 80%;
+	background-color: white;
+}
+
+#content2 .lunchcal3 th {
+	width: 14%;
+	height: 45px;
+	background-color: ghostwhite;
 	box-sizing: border-box;
 }
-#sname {
-	font-size: 1.2em;
+
+#content2 .lunchcal3 td {
+	box-sizing: border-box;
+	width: 14%;
+	height: 75px;
+	background-color: ghostwhite;
+	text-align: left;
+	padding-left: 10px;
+	line-height: 0px;
 }
 
 /* content3 추가 */
 #content3 {
-	border: 1px solid lightgray;
-	height: 10%;
-	line-height: 60px;
+	margin: 0;
+	box-sizing: border-box;
+	width: 100%;
+	height: 5%;
 	background-color: whitesmoke;
+	border: 1px solid lightgray;
 }
