--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -26,6 +26,7 @@
 section {
             width: 1500px;
             height: 870px;
+            margin-top:30px;
             border: 1px solid black;
             box-sizing: border-box;
             text-align: center;
@@ -96,8 +97,8 @@ section {
 
             #content2 #photo {
                 margin-top: 10px;
-                width: 65%;
-                height: 450px;
+                width: 60%;
+                height: 460px;
                 <!--border: 2px solid black;-->
             }
 
@@ -106,12 +107,12 @@ section {
         }
 
             #content3 .goal1 {
-                line-height: 55px;
+                line-height: 40px;
                 font-weight: bold;
-                font-size: 2em;
+                font-size: 1.5em;
             }
 
             #content3 .goal2 {
-                line-height: 40px;
-                font-size: 1.4em;
+                line-height: 30px;
+                font-size: 1.2em;
             }
