--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,18 +1,52 @@
-
 @charset "UTF-8";
+
+* {
+	font-family: 'NanumSquareLight';
+	font-family: 'NanumSquare';
+	font-family: 'NanumSquareBold';
+	font-family: 'NanumSquareExtraBold';
+	font-family: 'NanumSquareAcb';
+	font-family: 'NanumSquareAceb';
+	font-family: 'NanumSquareAcl';
+	font-family: 'NanumSquareAcr';
+	
+}
 
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-	font-size:12px;
+	font-size: 12px;
 	margin: 10px auto;
 }
-a { text-decoration:none; color:#333; }
-table th{background-color: pink; }
-table td{
-	border:1px solid pink;
+
+a {
+	text-decoration: none;
+	color: #333;
 }
-td, th{ padding:5px; }
-h2, b{text-align: center;}
-h3{margin: 0;}
-p{text-align: center;}
+
+table th {
+	background-color: #000560;
+	color: whitesmoke;
+	font-weight: none;
+}
+
+table td {
+	border: 1px solid #000560;
+}
+
+td, th {
+	padding: 5px;
+}
+
+h2, b {
+	text-align: center;
+	
+}
+
+h3 {
+	margin: 0;
+}
+
+p {
+	text-align: center;
+}
