--- a/WebContent/css/freeBoardList.css
+++ b/WebContent/css/freeBoardList.css
@@ -11,7 +11,6 @@ section {
 
 #content1, #content2, #content3 {
 	box-sizing: border-box;
-	border: 1px solid red;
 }
 
 #content1 {
@@ -57,7 +56,7 @@ section {
 }
 
 /* 추가 */
-#content1 #lnb ul li:nth-child(1) {
+#content1 #lnb ul li:nth-child(3) {
 	background-color: whitesmoke;
 	font-size: 1.5em;
 }
@@ -85,39 +84,48 @@ section {
 #content2 table {
 	/* border: 2px solid green; */
 	box-sizing: border-box;
-	margin-top: 35px;
+	margin-top: 10px;
 	width: 95%;
-	height: 90%;
+	height: 80%;
+}
+
+tr {
+	height: 50px;
 }
 
 th {
-	border-bottom: 1px dashed black;
+	border-bottom: 1px dotted black;
 	height: 10%;
 }
 
 th:nth-child(1) {
-	width: 5%;
+	width: 3%;
 }
 th:nth-child(2) {
-	width: 40%;
+	width: 60%;
 }
 th:nth-child(3) {
 	width: 10%;
 }
 th:nth-child(4) {
+	width: 7%;
+}
+th:nth-child(5){
 	width: 10%;
 }
 
 .left {
-	padding-left: 15px;
+	padding-left: 20px;
 	text-align: left;
 }
 
 #content2 td {
 	width: 10%;
+	height: 30px;
 	border: 1px dotted darkgray;
 	box-sizing: border-box;
-	margin-top: 10px;
+	background-color: white;
+/* 	margin-top: 10px; */
 }
 
 #sname {
@@ -127,6 +135,8 @@ th:nth-child(4) {
 /* content3 추가 */
 #content3 {
 	height: 10%;
-	line-height: 60px;
+	line-height: 85px; /*바뀐부분*/
 	background-color: whitesmoke;
+	border: 1px solid lightgray;
+	font-size: 1.2em;
 }
