--- a/WebContent/css/join.css
+++ b/WebContent/css/join.css
@@ -2,96 +2,108 @@
 
 section {
 	width: 1500px;
-	height: 1300px;
-	border: 1px solid black;
+	height: 750px;
 	box-sizing: border-box;
 	text-align: center;
 }
 
 #content1, #content2, #content3 {
 	box-sizing: border-box;
-	border: 1px solid red;
 }
 
 #content1 {
-	height: 5%;
+	height: 17%;
+}
+
+#content1 .content1 {
+	box-sizing: border-box;
+	width: 100%;
+	height: 87px;
+	line-height: 87px;
+}
+
+#content1 .content1 .logo {
+	width: 120px;
+	height: 85px;
+	margin-top: 10px;
+	box-sizing: border-box;
 }
 
 #content2 {
-	height: 90%;
+	height: 800px;
 }
 
 #content2 .join {
-	width: 60%;
 	text-align: center;
-	border: 1px solid #000560;
-	box-sizing: border-box;
-	margin-top: 40px;
 }
 
 .join_table {
-	border-radius: 4px;
+	width: 35%;
+	border: 1px solid darkgray;
+	
 }
 
 .join_table caption {
 	background-color: #000560;
-	font-size: 2em;
+	font-size: 1.5em;
 	color: whitesmoke;
-	padding: 5px 0;
+	padding: 10px;
+	box-sizing: border-box;
 }
 
 .join_table th {
 	text-align: center;
 	width: 200px;
-	font-size: 1.5em;
+	font-size: 1.2em;
+	box-sizing: border-box;
+	
 }
 
 .join_table td {
-	width: 150px;
-	height: 30px;
-	padding: 20px 0;
+	width: 60%;
+
 }
 
 input[type='text'], input[type='password'], input[type='number'], input[type='email']
 	{
-	width: 400px;
-	height: 50px;
+	text-align: left;
+	width: 250px;
+	height: 40px;
 	margin-left: 10px;
-	border: 2px solid gray;
-	font-size: 2em;
+	border: 1px solid gray;
+	font-size: 1.3em;
 	text-align: center;
 }
 
 input[type='radio'] {
 	width: 20%;
-	margin: 0;
 }
 
 input[type='file'] {
-	margin-left: 110px;
+	margin-left: 35px;
+	font-size: 1.1em;
 }
 
 label {
-	font-size: 1.3em;
+	font-size: 1.2em;
 }
 
 input[type='submit'], input[type='reset'], input[type='button'] {
 	width: 125px;
-	height: 60px;
+	height: 50px;
 	border: none;
 	outline: none;
 	color: whitesmoke;
 	background-color: #000560;
-	font-size: 1.4em;
-	margin-top: 10px;
+	font-size: 1.2em;
+	margin-top: 40px;
+	margin-bottom: 20px;
 }
 
 input[type='reset'] {
 	background-color: whitesmoke;
 	color: #000560;
 	border: 1px solid #000560;
+	
 }
 
-#content3 {
-	height: 5%;
-}
