--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,80 +1,98 @@
 @charset "UTF-8";
 
-
 section {
-            width: 1500px;
-            height: 870px;
-            border: 1px solid black;
-            box-sizing: border-box;
-            text-align: center;
-        }
+	width: 1500px;
+	height: 700px;
+	/* border: 1px solid black; */
+	box-sizing: border-box;
+	text-align: center;
+}
 
-        #content1, #content2, #content3 {
-            box-sizing: border-box;
-            /* border: 1px solid red; */
-        }
+#content1, #content2, #content3 {
+	box-sizing: border-box;
+}
 
-        #content1 {
-            height: 20%;
-            line-height: 245px;
-        }
+#content1 {
+	height: 20%;
+	margin-top: 50px;
+}
 
-        #content2 {
-            height: 55%;
-           
-        }
-            #content2 .login {
-                width: 60%;
-                text-align: center;
-                border: 1px solid #000560;
-                box-sizing:border-box;
-                margin-top: 20px;
-            }
+#content1 .content1 {
+	/* border: 1px solid red; */
+	box-sizing: border-box;
+	width: 100%;
+	height: 87px;
+	line-height: 87px;
+}
 
-        .login_table {
-            
-        }
-        .login_table caption {
-            background-color: #000560;
-            font-size: 2em;
-            color: whitesmoke;
-            padding: 5px 0 ;
-        }
-        .login_table th {
-            text-align: center;
-            width: 200px;
-            font-size: 1.5em;
-        }
-            
-            .login_table td {
-                width: 150px;
-                height: 30px;
-                padding: 20px 0;
-            }
-        input:focus{
-            outline:none;
-            border: 10px solid #000560;
-            background-color: white;
-        }
-        input[type='text'], input[type='password'] {
-            width: 400px;
-            height: 50px;
-            margin-left: 10px;
-            border: 2px solid gray;
-            font-size:2em;
-        }
-        
-        input[type='submit'], input[type='button'] {
-            width: 125px;
-            height: 60px;
-            border: none;
-            outline: none;
-            color: whitesmoke;
-            background-color: #000560;
-            font-size:1.4em;
-            margin-top: 25px;
-        }
+#content1 .content1 .logo {
+	width: 120px;
+	height: 85px;
+	margin-top: 40px;
+}
 
-        #content3 {
-            height: 25%;
-        }
+
+
+#content2 {
+	height: 40%;
+}
+
+#content2 .login {
+	width: 50%;
+	text-align: center;
+	box-sizing: border-box;
+	margin-top: 20px;
+}
+
+.login_table {
+	margin-top: 70px;
+	border: 1px solid lightgray;
+	border-radius: 10px;
+}
+
+.login_table caption {
+	background-color: #000560;
+	font-size: 1.8em;
+	color: whitesmoke;
+	padding: 10px 0;
+	border-radius: 5px;
+}
+
+.login_table th {
+	text-align: center;
+	width: 100px;
+	font-size: 1.2em;
+}
+
+.login_table td {
+	width: 150px;
+	height: 30px;
+	padding: 10px 0;
+}
+
+input:focus {
+	outline: none;
+	border: 10px solid #000560;
+	background-color: white;
+}
+
+input[type='text'], input[type='password'] {
+	width: 400px;
+	height: 50px;
+	margin-left: 10px;
+	border: 2px solid gray;
+	font-size: 2em;
+}
+
+input[type='submit'], input[type='button'] {
+	width: 100px;
+	height: 50px;
+	border: none;
+	outline: none;
+	color: whitesmoke;
+	background-color: #000560;
+	font-size: 1.2em;
+	margin-top: 15px;
+	margin-right: 5px;
+	margin-left: 5px;
+}
