--- a/WebContent/css/lunch.css
+++ b/WebContent/css/lunch.css
@@ -82,56 +82,48 @@ section {
 }
 
 #content2 .lunchcal1 {
-	border: 1px dashed blue;
-	box-sizing: border-box;
-}
-
-#content2 .lunchcal1 h2 {
-	height: 5%;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-#content2 .lunchcal2 {
-	border: 1px dashed purple;
 	width: 50%;
-	margin-top: 10px;
+	margin-top: 20px;
 	margin-bottom: 5px;
 	font-size: 1.3em;
 }
 
-#content2 .lunchcal2 select[name='year'], select[name='month'] {
+#content2 .lunchcal1 select[name='year'], select[name='month'] {
 	width: 150px;
 	height: 40px;
+	font-size: 1.1em;
+	font-weight: bold;
+	text-align: center;
+	margin: 0 5px;
 }
 
-#content2 .lunchcal3 {
-	margin-top: 25px;
+#content2 .lunchcal2 {
+	margin-top: 20px;
 	height: 500px;
 }
 
-#content2 .lunchcal3 table {
+#content2 .lunchcal2 table {
 	box-sizing: border-box;
 	height: 20%;
 	width: 80%;
 	background-color: white;
 }
 
-#content2 .lunchcal3 th {
+#content2 .lunchcal2 th {
 	width: 14%;
-	height: 45px;
-	background-color: ghostwhite;
+	height: 40px;
+	background-color: white;
 	box-sizing: border-box;
 }
 
-#content2 .lunchcal3 td {
+#content2 .lunchcal2 td {
 	box-sizing: border-box;
 	width: 14%;
-	height: 75px;
-	background-color: ghostwhite;
+	height: 83px;
+	background-color: white;
 	text-align: left;
 	padding-left: 10px;
-	line-height: 0px;
+	border: 1px dotted darkgray;
 }
 
 /* content3 추가 */
@@ -139,7 +131,19 @@ section {
 	margin: 0;
 	box-sizing: border-box;
 	width: 100%;
-	height: 5%;
+	height: 70px;
 	background-color: whitesmoke;
 	border: 1px solid lightgray;
+}
+
+.btn {
+	width: 70px;
+	height: 50px;
+	border: none;
+	outline: none;
+	color: whitesmoke;
+	background-color: #000560;
+	margin-top: 27px;
+	font-size: 1.1em;
+	
 }
