--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,118 +1,130 @@
 @charset "UTF-8";
 
 * {
-            margin: 0 auto;
-            padding: 0;
-            width: 100%;
-            font-family: 'NanumSquareLight';
-            font-family: 'NanumSquare';
-            font-family: 'NanumSquareBold';
-            font-family: 'NanumSquareExtraBold';
-            font-family: 'NanumSquareAcb';
-            font-family: 'NanumSquareAceb';
-            font-family: 'NanumSquareAcl';
-            font-family: 'NanumSquareAcr';
-        }
+	margin: 0 auto;
+	padding: 0;
+	width: 100%;
+	font-family: 'NanumSquareLight';
+	font-family: 'NanumSquare';
+	font-family: 'NanumSquareBold';
+	font-family: 'NanumSquareExtraBold';
+	font-family: 'NanumSquareAcb';
+	font-family: 'NanumSquareAceb';
+	font-family: 'NanumSquareAcl';
+	font-family: 'NanumSquareAcr';
+}
 
-        li {
-            list-style: none;
-        }
-        a {
-            text-decoration: none;
-            color: black;
-        }
+li {
+	list-style: none;
+}
 
+a {
+	text-decoration: none;
+	color: black;
+}
 
 section {
-            width: 1500px;
-            height: 870px;
-            margin-top:30px;
-            border: 1px solid black;
-            box-sizing: border-box;
-            text-align: center;
-        }
+	width: 1500px;
+	height: 870px;
+	margin-top: 30px;
+	box-sizing: border-box;
+	text-align: center;
+}
 
-        #content1, #content2, #content3 {
-            box-sizing: border-box;
-            /* border: 1px solid red; */
-        }
+#content1, #content2, #content3 {
+	box-sizing: border-box;
+}
 
-        #content1 {
-            height: 20%;
-            line-height: 245px;
-        }
-            #content1 .content1 {
-                /* border: 1px solid red; */
-                box-sizing: border-box;
-                width: 100%;
-                height: 87px;
-                line-height: 87px;
-            }
-            
-            #content1 .content1 .logo {
-                width: 70px;
-                height: 55px;
-                margin-top: 15px;
-            }
-            
-            #content1 #lnb {
-                clear: both;
-                width: 80%;
-            }
+#content1 {
+	height: 20%;
+	line-height: 240px;
+	box-sizing: border-box;
+}
 
-                #content1 #lnb ul {
-                    overflow: hidden;
-                }
+marquee {
+	font-size: 2em;
+	width: 1200px;
+}
 
-                    #content1 #lnb ul li {
-                        float: left;
-                        width: 25%;
-                        height: 85px;
-                        line-height: 85px;
-                        font-size: 1.2em;
-                        background-color: whitesmoke;
-                        border-radius: 7px 7px 0 0;
-                        border-top: 1px solid #000560;
-                        border-right: 1px solid #000560;
-                        border-left: 1px solid #000560;
-                        box-sizing: border-box;
-                    }
+#content1 .content1 {
+	box-sizing: border-box;
+	width: 100%;
+	height: 87px;
+	line-height: 87px;
+}
 
-                #content1 #lnb a {
-                    text-align: center;
-                }
+#content1 .content1 .logo {
+	width: 80px;
+	height: 60px;
+	margin-top: 13px;
+}
 
-                #content1 #lnb ul li:hover {
-                    background-color: whitesmoke;
-                    font-size: 1.5em;
-                }
+#content1 #lnb {
+	clear: both;
+	width: 100%;
+}
 
-                #content1 #lnb ul li:active {
-                    font-size: 2em;
-                }
+#content1 #lnb ul {
+	overflow: hidden;
+	border: 1px dashed black;
+	box-sizing: border-box;
+}
 
-        #content2 {
-            height: 55%;
-        }
+#content1 #lnb ul li {
+	float: left;
+	width: 25%;
+	height: 85px;
+	line-height: 85px;
+	font-size: 1.2em;
+	background-color: whitesmoke;
+	margin-top: 0px;
+	box-sizing: border-box;
+}
 
-            #content2 #photo {
-                margin-top: 10px;
-                width: 60%;
-                height: 460px;
-                <!--border: 2px solid black;-->
-            }
+#content1 #lnb a {
+	text-align: center;
+	color: #000560;
+	font-size: 1.2em;
+}
 
-        #content3 {
-            height: 25%;
-        }
+#content1 #lnb ul li:hover {
+	font-size: 1.3em;
+	font-weight: bold;
+}
 
-            #content3 .goal1 {
-                line-height: 40px;
-                font-weight: bold;
-                font-size: 1.5em;
-            }
+#content1 #lnb ul li:active {
+	font-size: 2em;
+}
 
-            #content3 .goal2 {
-                line-height: 30px;
-                font-size: 1.2em;
-            }
+#content2 {
+	height: 60%;
+	border: 1px dashed black;
+	border-bottom: none;
+}
+
+#content2 #photo {
+	margin-top: 35px;
+	width: 80%;
+	height: 90%;
+	opacity: 0.9;
+}
+
+#content3 {
+	height: 20%;
+	border: 1px dashed black;
+	padding-top: 25px;
+	box-sizing:border-box;
+	
+}
+
+#content3 .goal1 {
+	line-height: 60px;
+	font-weight: bold;
+	font-size: 4em;
+}
+
+#content3 .goal2 {
+	margin-top: 10px;
+	line-height: 30px;
+	font-size: 1.2em;
+}
