--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -80,6 +80,7 @@ input[type='text'], input[type='password'] {
 	width: 400px;
 	height: 50px;
 	margin-left: 10px;
+	padding-left: 10px;
 	border: 2px solid gray;
 	font-size: 2em;
 }
