--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -9,14 +9,12 @@
 	font-family: 'NanumSquareAceb';
 	font-family: 'NanumSquareAcl';
 	font-family: 'NanumSquareAcr';
-	
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
-	font-size: 12px;
-	margin: 10px auto;
+	margin: 30px auto;
+	width: 80%;
+	height: 600px;
 }
 
 a {
@@ -28,6 +26,7 @@ table th {
 	background-color: #000560;
 	color: whitesmoke;
 	font-weight: none;
+	font-size: 2em;
 }
 
 table td {
@@ -40,7 +39,6 @@ td, th {
 
 h2, b {
 	text-align: center;
-	
 }
 
 h3 {
@@ -49,4 +47,15 @@ h3 {
 
 p {
 	text-align: center;
+}
+
+h3 {
+	text-align: center;
+	line-height: 50px;
+}
+
+#exit {
+	width: 35px;
+	height: 35px;
+	border: 1px solid navy;
 }
